# libpafe

./: .gitignore  CMakeLists.txt  ChangeLog  README.md
.github/workflows/: build.yml  check_compat.yml  platform_test.yml
cmake/: configure-libusb.cmake
include/: felica_command.h  libpafe.h  pasori_command.h
src/: CMakeLists.txt  felica_command.c  pasori_command.c
tests/: CMakeLists.txt  felica_dump.c  pasori_test.c
